# pywcmp

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
pywcmp/: __init__.py  bundle.py  ets.py  pygeoapi_plugin.py  util.py
pywcmp/wcmp2/: ets.py  kpi.py
tests/: run_tests.py
tests/data/: wcmp2-failing-created-none.json  wcmp2-failing-invalid-centre-id.json  wcmp2-failing-invalid-geometry-range.json  wcmp2-failing-invalid-geometry-validity.json  wcmp2-failing-invalid-identifier-empty.json  wcmp2-failing-invalid-identifier-space.json  wcmp2-failing-invalid-link-channel-centre-id.json  wcmp2-failing-invalid-link-channel-data-policy.json  wcmp2-failing-invalid-link-channel-wis2-topic-wss.json  wcmp2-failing-invalid-link-channel-wis2-topic.json  wcmp2-failing-invalid-time-resolution.json  wcmp2-failing-no-link-channel-centre-id.json  wcmp2-failing.json  wcmp2-passing-no-centre-id.json  wcmp2-passing-null-time.json  wcmp2-passing-test-centre-id-in-topic.json  wcmp2-passing-test-centre-id.json  wcmp2-passing.json
